*Empty MediaWiki Message*

--- a/Словѣньско.mw
+++ b/Словѣньско.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Словѣньско
 | знамѧ= [[Видъ:Flag of Slovakia.svg|150px]]
 | знакъ = [[image:Coat of Arms of Slovakia.svg|80px]]
-| map = [[image:EU location SVK.png|300px]] 
+| map =EU location SVK.png
 | Стол҄ьнъ градъ = [[Братислава]]
 | Ѩзыкъ = [[Карпатьско-словѣньскъ ѩзыкъ|карпатьско-словѣньскъ]] 
 | Глава = 
