*Empty MediaWiki Message*

--- a/Сѣвєрьна_Макєдонїꙗ.mw
+++ b/Сѣвєрьна_Макєдонїꙗ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Димократї Македонї 
 | знамѧ= [[Видъ:Flag of Macedonia.svg|150px]]
 | знакъ = [[image:SR Macedonia coa.png|80px]]
-| map = [[image:LocationMacedonia.svg|300px]] 
+| map = LocationMacedonia.svg 
 | Стол҄ьнъ градъ = [[Съкопиѥ]] 
 | Ѩзыкъ = [[Македоньскъ ѩзыкъ|македоньскъ]]
 | Глава = 
