*Empty MediaWiki Message*

--- a/Пол҄ьска.mw
+++ b/Пол҄ьска.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Пол̑ьска
 | знамѧ= [[Видъ:Flag of Poland.svg|150px]]
 | знакъ = [[image:Coat of arms of Poland-official.png|80px]]
-| map = [[image:LocationPoland.svg|300px]] 
+| map = LocationPoland.svg 
 | Стол҄ьнъ градъ = [[Варшава]] 
 | Ѩзыкъ = [[Пол҄ьскъ ѩзыкъ|пол̑ьскъ]] 
 | Глава = 
