*Empty MediaWiki Message*

--- a/Бѣла_Роусь.mw
+++ b/Бѣла_Роусь.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Бѣла Рѹсь
 | знамѧ= [[Видъ:Flag of Belarus.svg|150px]]
 | знакъ = [[image:Coat of arms of Belarus.svg|80px]]
-| map = [[image:LocationBelarus.svg|300px]] 
+| map = LocationBelarus.svg 
 | Стол҄ьнъ градъ = [[Мѣньскъ]]
 | Ѩзыкъ = [[Ѩзыкъ бѣлорѹсьскъ|бѣлорѹсьскъ]], [[Ѩзыкъ рѹсьскъ|рѹсьскъ]] 
 | Глава = [[Алеѯандръ Лѹкашенко]]
