*Empty MediaWiki Message*

--- a/Босна_и_Хєрсєговина.mw
+++ b/Босна_и_Хєрсєговина.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Босна
 | знамѧ= [[Видъ:Flag of Bosnia and Herzegovina.svg|150px]]
 | знакъ = [[image:Bosnia and Herzegovina Coats of Arms.svg|80px]]
-| map = [[image:Europe location BHG.png|300px]] 
+| map = Europe location BHG.png
 | Стол҄ьнъ градъ = [[Сараѥво]] 
 | Ѩзыкъ = [[Босньскъ ѩзыкъ|босньскъ]], [[Хръватьскъ ѩзыкъ|хръватьскъ]], [[Срьбьскъ ѩзыкъ|срьбьскъ]]
 | Глава = 
