*Empty MediaWiki Message*

--- a/Блъгарїꙗ.mw
+++ b/Блъгарїꙗ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Блъгарї  
 | знамѧ= [[Видъ:Flag of Bulgaria.svg|150px]]
 | знакъ = [[image:Bulgaria COA.svg|80px]]
-| map = [[image:LocationBulgaria.svg|300px]] 
+| map = LocationBulgaria.svg 
 | Стол҄ьнъ градъ = [[Софї]]
 | Ѩзыкъ = [[Блъгарьскъ ѩзыкъ|блъгарьскъ]]
 | Глава = 
