*Empty MediaWiki Message*

--- a/Їꙁдраил҄ь.mw
+++ b/Їꙁдраил҄ь.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Їздраил҄ь
 | знамѧ= [[Видъ:Flag_of_Israel.svg|150px]]
 | знакъ = [[image:COA of Israel.svg|80px]]
-| map = [[image:LocationIsrael.svg|300px]] 
+| map = LocationIsrael.svg 
 | Стол҄ьнъ градъ = [[Їерѹсалимъ]]
 | Ѩзыкъ = [[евреискъ ѩзыкъ|евреискы]]
 | Глава = 
