*Empty MediaWiki Message*

--- a/Їллѷрїиска_Словѣнїꙗ.mw
+++ b/Їллѷрїиска_Словѣнїꙗ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Їллѷрїиска Словѣнї 
 | знамѧ= [[Видъ:Flag of Slovenia.svg|150px]]
 | знакъ = [[image:Coat of Arms of Slovenia.svg|80px]]
-| map = [[image:EU location SLO.png|300px]] 
+| map = EU location SLO.png 
 | Стол҄ьнъ градъ = [[Люблна]]
 | Ѩзыкъ = [[їллѷрїиско-словѣньскъ ѩзыкъ|їллѷрїиско-словѣньскъ]]
 | Глава = 
