*Empty MediaWiki Message*

--- a/Єгѷптъ.mw
+++ b/Єгѷптъ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name =  Егѷптъ
 | знамѧ= [[Видъ:Flag of Egypt.svg|150px]]
 | знакъ = [[image:COA of Egypt.svg|80px]]
-| map = [[image:LocationEgypt.png|300px]] 
+| map =LocationEgypt.png 
 | Стол҄ьнъ градъ = 
 | Ѩзыкъ = [[Аравьскъ ѩзыкъ|аравьскъ]]
 | Глава = 
