*Empty MediaWiki Message*

--- a/Єрѷѳрїꙗ.mw
+++ b/Єрѷѳрїꙗ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Ерѷѳрї
 | знамѧ= [[Видъ:Flag_of_Eritrea.svg|150px]]
 | знакъ = [[image:Eritrea coa.png|80px]]
-| map = [[image:LocationEritrea.svg|300px]] 
+| map = LocationEritrea.svg 
 | Стол҄ьнъ градъ = [[Асмера]]
 | Ѩзыкъ = [[Аравьскъ ѩзыкъ|аравьскъ]], [[тїгрїньскъ ѩзыкъ|тїгрїньскъ]] 
 | Глава = 
