*Empty MediaWiki Message*

--- a/Єѳїопїꙗ.mw
+++ b/Єѳїопїꙗ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Еѳїопї
 | знамѧ= [[Видъ:Flag_of_Ethiopia.svg|150px]]
 | знакъ = [[image:Ethiopia COA.svg|80px]]
-| map = [[image:LocationEthiopia.png|300px]] 
+| map = LocationEthiopia.png 
 | Стол҄ьнъ градъ = [[Адїсъ-Абеба]]  
 | Ѩзыкъ = [[Амхарьскъ ѩзыкъ|амхарьскъ]] 
 | Глава = 
