*Empty MediaWiki Message*

--- a/Армєнїꙗ.mw
+++ b/Армєнїꙗ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Арменї
 | знамѧ= [[Видъ:Flag of Armenia.svg|150px]]
 | знакъ = [[image:Armenia coa.png|80px]]
-| map = [[image:LocationArmenia.png|300px]] 
+| map = LocationArmenia.png
 | Стол҄ьнъ градъ = 
 | Ѩзыкъ = [[Ѩзыкъ арменьскъ|арменьскъ]]
 | Глава = 
