*Empty MediaWiki Message*

--- a/Аꙁѣрбаичанъ.mw
+++ b/Аꙁѣрбаичанъ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Азѣрбаичанъ
 | знамѧ= [[Видъ:Flag_of_Azerbaijan.svg|150px]]
 | знакъ = [[image:Azerbaijan coa.png|80px]]
-| map = [[image:Aj-map.png|300px]] 
+| map = Aj-map.png 
 | Стол҄ьнъ градъ = [[Бакы]]
 | Ѩзыкъ = [[азѣрбаичаньскъ ѩзыкъ|азѣрбаичаньскъ]] 
 | Глава = 
