--- a/Оукраина.mw
+++ b/Оукраина.mw
@@ -9,7 +9,7 @@
 | Людии = 46,4 леѡдръ
 | Почѧта = 1991
 }}
-'''Ѹкраина''' (''Україна'') въсточьныѩ [[Еѵрѡпа|Еѵрѡпы]] дрьжава ѥстъ, ѥѩ же стольнъ градъ [[Кыѥвъ]]. Ѹкраины дрьжавьнъ ѩзыкъ ѥстъ [[Ѩзыкъ ѹкраиньскъ|ѹкраиньскъ ѩзыкъ]]. Ѹкраине людии 46,4 леѡдръ обитаѥтъ.
+'''Ѹкраина''' (''Україна'') въсточьныѩ [[Еѵрѡпа|Еѵрѡпы]] дрьжава ѥстъ. Cтольнъ градъ [[Кыѥвъ]] ѥстъ. Ѹкраины дрьжавьнъ [[ѹкраиньскъ ѩзыкъ|ѹкраиньскъ]] ѩзыкъ ѥстъ. Ѹкраинѣ людии 46,4 леѡдръ обитаѥтъ.
 
 [[Category:Ѹкраина|*]]
 
