--- a/Свѧтꙑи_Нїколаи_·_градъ.mw
+++ b/Свѧтꙑи_Нїколаи_·_градъ.mw
@@ -1,2 +1,2 @@
-'''Свети Николе''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Свѧтыи Нїколаи''' ([[македоньскъ ѩзыкъ|македоньскы]] ''Свети Николе'') [[Македонїıа|Македонїѩ]] градъ ѥстъ. 
 [[Category:Гради]]
