--- a/Оулиꙗновьскъ.mw
+++ b/Оулиꙗновьскъ.mw
@@ -8,8 +8,7 @@
 | map = 
 |}}
 
-'''Ѹлиновьскъ''' градъ [[Рѡсї|Рѡсїѩ]] ѥстъ. Людии обитаѥтъ 623 тысѧщь. Градъ построѥнъ рѣкахъ [[Вльга|Вльѕѣ]] и [[Свига|Свиѕѣ]] ѥстъ. Главьнъ градъ [[Ѹлиновьска область|Ѹлиновьскы]] области ѥстъ.
-Основанъ ѥстъ лѣта 1648 [[Богъданъ Хытрово|Богъданомь Хытровомь]]. Града имѧ до лѣта 1924 Симбирьскъ, а до лѣта 1780 Синбирьскъ бѣаше.
+'''Ѹлиновьскъ''' ([[рѹсьскъ ѩзыкъ|рѹсьскы]] ''Ульяновск'') [[Рѡсї|Рѡсїѩ]] градъ ѥстъ. Людии обитаѥтъ 623 тысѫщь. Градъ построѥнъ рѣкахъ [[Вльга|Вльѕѣ]] и [[Свига|Свиѕѣ]] ѥстъ. [[Ѹлиновьска область|Ѹлиновьскы]] области главьнъ градъ ѥстъ. Основанъ лѣта 1648 ѥстъ [[Богъданъ Хытрово|Богъданомь Хытровомь]]. Града имѧ до лѣта 1924 Симбирьскъ, а до лѣта 1780 Синбирьскъ бѣаше. Нынѣ [[Владимѣръ Ленинъ|Владимѣра Ѹлинова-Ленина]] именьмь зовомыи ѥстъ.
 
 [[Катигорї:Гради]]
 [[Катигорї:Рѡсї]]
