*Empty MediaWiki Message*

--- a/Оулиꙗновьскъ.mw
+++ b/Оулиꙗновьскъ.mw
@@ -5,7 +5,7 @@
 | Глава = 
 | Людии = 623 тысѫщь
 | Основанъ = 1648
-| map = 
+| map = [[Видъ:Ulyanovsk in Ulyanovsk Oblast.png|290 px]]
 |}}
 
 '''Ѹлиновьскъ''' ([[рѹсьскъ ѩзыкъ|рѹсьскы]] ''Ульяновск'') [[Рѡсї|Рѡсїѩ]] градъ ѥстъ. Людии обитаѥтъ 623 тысѫщь. Градъ построѥнъ рѣкахъ [[Вльга|Вльѕѣ]] и [[Свига|Свиѕѣ]] ѥстъ. [[Ѹлиновьска область|Ѹлиновьскы]] области главьнъ градъ ѥстъ. Основанъ лѣта 1648 ѥстъ [[Богъданъ Хытрово|Богъданомь Хытровомь]]. Града имѧ до лѣта 1924 Симбирьскъ, а до лѣта 1780 Синбирьскъ бѣаше. Нынѣ [[Владимѣръ Ленинъ|Владимѣра Ѹлинова-Ленина]] именьмь зовомыи ѥстъ.
