--- a/Нѣмьчьскъ_ѩꙁꙑкъ.mw
+++ b/Нѣмьчьскъ_ѩꙁꙑкъ.mw
@@ -1,5 +1,5 @@
 [[Видъ:Map German World.png|thumb]]
-'''Нѣмьчьскъ''' (нѣмьчьскы ''Deutsch'') [[Нѣмьци|Нѣмьць]], [[Аѵстрї|Аѵстрїѩ]], [[Гельвецї|Гельвецїѩ]] <!-- (латинскы имѧ "Швейцарии" ѥстъ)--> и мъногъ странъ тако же дрьжавьнъ ѩзыкъ ѥстъ <!--(Бельгия, Лихтенштейн, Люксембург)-->. Нѣмьчьскыи ѩзыкъ сѧ [[їндоеѵрѡпьсци ѩзыци|їндоеѵрѡпьскы]] сѣмиѩ ѩзыкъ влѥтъ. Ѥго письмо [[латиньска азъбѹкы|латиньско]] ѥстъ. Число глаголател҄ь нѣмьчьскы около 110 леѡдръ чловѣкъ сѫтъ.
+'''Нѣмьчьскъ''' (нѣмьчьскы ''Deutsch'') [[Нѣмьци|Нѣмьць]], [[Аѵстрї|Аѵстрїѩ]], [[Ел҄ьветї|Ел҄ьветїѩ]] <!-- (латинскы имѧ "Швейцарии" ѥстъ Helvetia, еллинскы Ελβετία ѥстъ)--> и мъногъ странъ тако же дрьжавьнъ ѩзыкъ ѥстъ <!--(Бельгия, Лихтенштейн, Люксембург)-->. Нѣмьчьскыи ѩзыкъ сѧ [[їндоеѵрѡпьсци ѩзыци|їндоеѵрѡпьскы]] сѣмиѩ ѩзыкъ влѥтъ. Ѥго письмо [[латиньска азъбѹкы|латиньско]] ѥстъ. Число глаголател҄ь нѣмьчьскы около 110 леѡдръ чловѣкъ сѫтъ.
 
 == Нѣмьчьска азъбѹкы ==
 
