*Empty MediaWiki Message*

--- a/Босна_и_Хєрсєговина.mw
+++ b/Босна_и_Хєрсєговина.mw
@@ -3,14 +3,14 @@
 | знакъ = [[image:Bosnia and Herzegovina Coats of Arms.svg|80px]]
 | map = Europe location BHG.png
 | Стол҄ьнъ градъ = [[Сараѥво]] 
-| Ѩзыкъ = [[Босньскъ ѩзыкъ|босньскъ]], [[Хръватьскъ ѩзыкъ|хръватьскъ]], [[Срьбьскъ ѩзыкъ|срьбьскъ]]
+| Ѩзыкъ = [[Босньскъ ѩзыкъ|босньскъ]], [[Срьбьскъ ѩзыкъ|срьбьскъ]], [[Хръватьскъ ѩзыкъ|хръватьскъ]]
 | Глава = 
 | area =
 | Людии = 4 леѡдръ
 | Почѧта = 1992
 |}}
 
-'''Босна''' (босньскы: ''Bosna i Hercegovina'') [[страна]] и дрьжава срѣдьн̑иихъ [[Балкани|Балканъ]] ѥестъ. Стольнъ градъ [[Сараѥво]] ѥстъ. Дрьжавьни ѩзыци [[Босньскъ ѩзыкъ|босньскъ]], [[Хръватьскъ ѩзыкъ|хръватьскъ]] и [[Срьбьскъ ѩзыкъ|срьбьскъ]] сѫтъ. Босны людии 4 леѡдръ обитаѥтъ
+'''Босна''' (босньскы, хръватьскы и срьбьскы: ''Bosna i Hercegovina'', ''Босна и Херцеговина'') [[страна]] и дрьжава срѣдьн̑иихъ [[Балкани|Балканъ]] ѥестъ. Стольнъ градъ [[Сараѥво]] ѥстъ. Дрьжавьни ѩзыци [[Босньскъ ѩзыкъ|босньскъ]], [[Срьбьскъ ѩзыкъ|срьбьскъ]] и [[Хръватьскъ ѩзыкъ|хръватьскъ]] сѫтъ. Босны людии 4 леѡдръ обитаѥтъ.
 
 == Зьри тако же ==
 *[[Срьбї]]
