*Empty MediaWiki Message*

--- a/Кашоубьскъ_ѩꙁꙑкъ.mw
+++ b/Кашоубьскъ_ѩꙁꙑкъ.mw
@@ -1,7 +1,7 @@
 '''Кашѹбьскъ ѩзыкъ''' (кашѹбьскы ''kaszëbsczi jãzëk'') ѥстъ ѩзыкъ [[Пол̑ьска|Пол̑ьскы]].
 == Кашѹбьска азъбѹкы  ==
 <div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
-Aa Ąą Ãã Bb Cc Dd Ee Éé Ëë Ff Gg Hh Ii Jj Kk Ll Łł<br>Mm Nn Ńń Oo Òò Óó Ôô Pp Rr Ss Tt<br>Uu Ùù Vv WwYy Zz Żż
+Aa Ąą Ãã Bb Cc Dd Ee Éé Ëë Ff Gg Hh Ii Jj Kk Ll Łł Mm Nn Ńń Oo Òò Óó Ôô Pp Rr Ss Tt Uu Ùù Vv WwYy Zz Żż
 </div>
 
 == Зьри такожде ==
