*Empty MediaWiki Message*

--- a/Сѷмєѡнъ_А҃_Вєликъ.mw
+++ b/Сѷмєѡнъ_А҃_Вєликъ.mw
@@ -1,6 +1,6 @@
-'''Сѷмеонъ А Великъ''' ({{Lang-bg| Симеон I Велики}}) (893-927) бѣ цѣсарь [[Блъгарї|блъгареѭ]].
+'''Сѷмеѡнъ А Великъ''' ({{Lang-bg| Симеон I Велики}}) (893-927) бѣ цѣсарь [[Блъгарї|блъгареѭ]].
 
-Сѷмеонъ А Великъ покори Грькы, Срьбїѭ  и дрѹгыѩ. Създа цѣсарьство великоѥ, коѥго стольнъ градъ бѣ блъгарьскъ градъ Преславъ.
+Сѷмеѡнъ А Великъ покори Грькы, Срьбїѭ  и дрѹгыѩ. Създа цѣсарьство великоѥ, коѥго стольнъ градъ бѣ блъгарьскъ градъ Преславъ.
 
 [[Category:Блъгарї]]
 [[Category:Людиѥ]]
