Стара имена вьс напьсана съ базнами сѫтъ. Исправлти врѣмене ми нынѣ нѣстъ.

--- a/Стара_Ꙁагора.mw
+++ b/Стара_Ꙁагора.mw
@@ -2,13 +2,12 @@
 | знамѧ= 
 | знакъ = [[Видъ:Stara-Zagora-coat-of-arms.svg|80 px]]
 | Дрьжава = Блъгарї
-| Глава = Еѷгениї Желевъ
+| Глава = Еѵгенїи Желевъ
 | Людии = 150 тысѫщь
 | Основанъ = 
 | map = [[Видъ:Stara Zagora location in Bulgaria.png|200 px]]
 }}
-'''Стара Загора''' [[Блъгарї|Блъгарїѧ]] градъ ѥстъ. Людии обитаѥтъ 150 тысѫщь. Старѥ имѧ Старе-Загоре бысть ''Бѥрѡѥ'', ''Ѹлпѩ Аѹгѹста Траѩна'', ''Бѡрѹї'', ''Їрїнѹполісь'', ''Верєѧ'', ''Єєскїхь Загра'', ''Железнікь''. 
-
+'''Стара Загора''' [[Блъгарї|Блъгарїѧ]] градъ ѥстъ. Людии обитаѥтъ 150 тысѫщь.
 [[Катигорї:Гради]]
 [[Катигорї:Блъгарї]]
 
