*Empty MediaWiki Message*

--- a/Омьска_область.mw
+++ b/Омьска_область.mw
@@ -1,4 +1,4 @@
-[[Видъ:Flag of Omsk Oblast.svg|thumb|right|200px|Томьскы области знамѧ]]
+[[Видъ:Flag of Omsk Oblast.svg|thumb|right|200px|Омьскы области знамѧ]]
 '''Омьска область''' [[Рѡсї|Рѡсїѩ]] область ѥсть. Главьнъ градъ Омьскы области [[Омьскъ]] ѥсть. Людии 2 леѡдръ обитаѥтъ. 
 
 ==Омьскыѩ области наибол҄ьше гради==
