*Empty MediaWiki Message*

--- a/Новосибирьска_область.mw
+++ b/Новосибирьска_область.mw
@@ -9,4 +9,31 @@
 * [[Кѹибышевъ]]
 
 [[Category:Рѡсї]]
+
+[[en:Novosibirsk_Oblast]]
+[[bg:Новосибирска област]]
+[[ca:Província de Novosibirsk]]
+[[cs:Novosibirská oblast]]
+[[de:Oblast Nowosibirsk]]
+[[et:Novosibirski oblast]]
+[[el:Περιφέρεια Νοβοσιμπίρσκ]]
+[[es:Óblast de Novosibirsk]]
+[[fa:استان نووسیبیرسک]]
+[[fr:Oblast de Novossibirsk]]
+[[ko:노보시비르스크 주]]
+[[hr:Novosibirska oblast]]
+[[id:Oblast Novosibirsk]]
+[[it:Oblast' di Novosibirsk]]
+[[lt:Novosibirsko sritis]]
+[[nl:Oblast Novosibirsk]]
+[[ja:ノヴォシビルスク州]]
+[[pl:Obwód nowosybirski]]
+[[pt:Oblast de Novosibirsk]]
+[[ro:Regiunea Novosibirsk]]
 [[ru:Новосибирская область]]
+[[sk:Novosibirská oblasť]]
+[[sh:Novosibirska oblast]]
+[[fi:Novosibirskin alue]]
+[[sv:Novosibirsk oblast]]
+[[uk:Новосибірська область]]
+[[zh:新西伯利亚州]]
