*Empty MediaWiki Message*

--- a/Омьска_область.mw
+++ b/Омьска_область.mw
@@ -9,4 +9,33 @@
 * [[Калачиньскъ]]
 
 [[Category:Рѡсї]]
+
+[[en:Omsk Oblast]]
+[[bg:Омска област]]
+[[ca:Província d'Omsk]]
+[[de:Oblast Omsk]]
+[[et:Omski oblast]]
+[[el:Περιφέρεια Ομσκ]]
+[[es:Óblast de Omsk]]
+[[eo:Omska provinco]]
+[[fa:استان امسک]]
+[[fr:Oblast d'Omsk]]
+[[ko:옴스크 주]]
+[[hr:Omska oblast]]
+[[id:Oblast Omsk]]
+[[it:Oblast' di Omsk]]
+[[lt:Omsko sritis]]
+[[nl:Oblast Omsk]]
+[[ja:オムスク州]]
+[[nn:Omsk oblast]]
+[[pl:Obwód omski]]
+[[pt:Oblast de Omsk]]
+[[ro:Regiunea Omsk]]
 [[ru:Омская область]]
+[[sk:Omská oblasť]]
+[[sr:Омска област]]
+[[sh:Omska oblast]]
+[[fi:Omskin alue]]
+[[sv:Omsk oblast]]
+[[uk:Омська область]]
+[[zh:鄂木斯克州]]
