*Empty MediaWiki Message*

--- a/Пол҄ьскъ_ѩꙁꙑкъ.mw
+++ b/Пол҄ьскъ_ѩꙁꙑкъ.mw
@@ -1,5 +1,5 @@
 '''Пол҄ьскъ ѩзыкъ''' ({{lang-pl|Język polski}}) ѥстъ [[дрьжавьныи ѩзыкъ]] [[Пол̑ьска|Пол̑ьскы]].
-Глаголѭщь людии же с҄имь ѩзыкомь междѹ 44 леѡдръ сѫтъ.
+Глаголѭщь людии же с҄имь ѩзыкомь ко 44 леѡдръ сѫтъ.
 
 == Пол҄ьскъска  [[азъбѹкы]]==
 
