*Empty MediaWiki Message*

--- a/Чєшьскъ_ѩꙁꙑкъ.mw
+++ b/Чєшьскъ_ѩꙁꙑкъ.mw
@@ -1,5 +1,4 @@
-'''Чешьскъ ѩзыкъ''' (чешьскы ''český jazyk, čeština'') [[Чешьско|Чешьска]] дрьжавьнъ ѩзыкъ ѥстъ, западьнъ словѣньскъ ѩзыкъ ѥсть.
-
+'''Чешьскъ ѩзыкъ''' (чешьскы ''český jazyk, čeština'') [[Чешьско|Чешьска]] дрьжавьнъ ѩзыкъ ѥстъ, западьнъ словѣньскъ ѩзыкъ ѥсть. Глаголѭщь людии же с҄имь ѩзыкомь ко 12 леѡдръ сѫтъ.
 
 == Чешьска [[азъбѹкы]] ==
 
