*Empty MediaWiki Message*

--- a/Нѣмьчьскъ_ѩꙁꙑкъ.mw
+++ b/Нѣмьчьскъ_ѩꙁꙑкъ.mw
@@ -1,5 +1,5 @@
 [[Видъ:Map German World.png|thumb]]
-'''Нѣмьчьскъ''' (нѣмьчьскы ''Deutsch'') [[Нѣмьци|Нѣмьць]], [[Аѵстрї|Аѵстрїѩ]], [[Ел҄ьветї|Ел҄ьветїѩ]] <!-- (латинскы имѧ "Швейцарии" ѥстъ Helvetia, еллинскы Ελβετία ѥстъ)--> и мъногъ странъ тако же дрьжавьнъ ѩзыкъ ѥстъ <!--(Бельгия, Лихтенштейн, Люксембург)-->. Нѣмьчьскыи ѩзыкъ сѧ [[їндоеѵрѡпьсци ѩзыци|їндоеѵрѡпьскы]] сѣмиѩ ѩзыкъ влѥтъ. Ѥго письмо [[латиньска азъбѹкы|латиньско]] ѥстъ. Число глаголател҄ь нѣмьчьскы около 110 леѡдръ чловѣкъ сѫтъ.
+'''Нѣмьчьскъ''' (нѣмьчьскы ''Deutsch'') [[Нѣмьци|Нѣмьць]], [[Аѵстрї|Аѵстрїѩ]], [[Ел҄ьветї|Ел҄ьветїѩ]] <!-- (латинскы имѧ "Швейцарии" ѥстъ Helvetia, еллинскы Ελβετία ѥстъ)--> и мъногъ странъ тако же дрьжавьнъ ѩзыкъ ѥстъ <!--(Бельгия, Лихтенштейн, Люксембург)-->. Нѣмьчьскыи ѩзыкъ сѧ [[їндоеѵрѡпьсци ѩзыци|їндоеѵрѡпьскы]] сѣмиѩ ѩзыкъ влѥтъ. Ѥго письмо [[латиньска азъбѹкы|латиньско]] ѥстъ. Число глаголател҄ь нѣмьчьскы ко 110 леѡдръ чловѣкъ сѫтъ.
 
 == Нѣмьчьска азъбѹкы ==
 
@@ -11,5 +11,113 @@ Aa (Ää) Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo (Öö) Pp Qq Rr Ss (ß) Tt U
 
 [[Катигорї:Ѩзыци]]
 
+[[af:Duits]]
+[[als:Deutsche Sprache]]
+[[am:ጀርመንኛ]]
+[[an:Idioma alemán]]
+[[ang:Þēodisc sprǣc]]
+[[ar:لغة ألمانية]]
+[[ast:Alemán]]
+[[az:Alman dili]]
+[[bar:Deitsche Sprach]]
+[[bat-smg:Vokėitiu ruoda]]
+[[be-x-old:Нямецкая мова]]
+[[bg:Немски език]]
+[[bn:জার্মান ভাষা]]
+[[br:Alamaneg]]
+[[bs:Njemački jezik]]
+[[ca:Alemany]]
+[[cdo:Dáik-ngṳ̄]]
+[[cs:Němčina]]
+[[cv:Нимĕç чĕлхи]]
+[[cy:Almaeneg]]
+[[da:Tysk (sprog)]]
 [[de:Deutsche Sprache]]
+[[dv:އަލްމާނީ]]
+[[el:Γερμανική γλώσσα]]
+[[eml:Tedèsch]]
+[[en:German language]]
+[[eo:Germana lingvo]]
+[[es:Idioma alemán]]
+[[et:Saksa keel]]
+[[eu:Aleman]]
+[[fa:زبان آلمانی]]
+[[fi:Saksan kieli]]
+[[fo:Týskt (mál)]]
+[[fr:Allemand]]
+[[fur:Lenghe todescje]]
+[[ga:Gearmáinis]]
+[[gd:Gearmailtis]]
+[[gl:Lingua alemá]]
+[[gv:Germaanish]]
+[[he:גרמנית]]
+[[hi:जर्मन भाषा]]
+[[hr:Njemački jezik]]
+[[hsb:Němska rěč]]
+[[hu:Német nyelv]]
+[[hy:Գերմաներեն]]
+[[ia:Lingua german]]
+[[id:Bahasa Jerman]]
+[[ilo:Pagsasao nga Aleman]]
+[[io:Germaniana linguo]]
+[[is:Þýska]]
+[[it:Lingua tedesca]]
+[[ja:ドイツ語]]
+[[jbo:dotybau]]
+[[jv:Basa Jerman]]
+[[ko:독일어]]
+[[ksh:Deutsche Shprooch]]
+[[kw:Almaynek]]
+[[la:Lingua Theodisca]]
+[[lb:Däitsch]]
+[[li:Duits]]
+[[ln:Lialémani]]
+[[lt:Vokiečių kalba]]
+[[lv:Vācu valoda]]
+[[mg:Fiteny alemainai]]
+[[mk:Германски јазик]]
+[[ml:ജര്‍മന്‍ ഭാഷ]]
+[[mr:जर्मन भाषा]]
+[[ms:Bahasa Jerman]]
+[[nah:Teutontlahtōlli]]
+[[nap:Lengua germanese]]
+[[nds:Düütsche Spraak]]
+[[nds-nl:Duuts]]
+[[nl:Duits]]
+[[nn:Tysk språk]]
+[[no:Tysk språk]]
+[[nrm:Allemaund]]
+[[oc:Alemand]]
+[[pdc:Modern Hochdeitsch]]
+[[pl:Język niemiecki]]
+[[pt:Língua alemã]]
+[[qu:Aliman simi]]
+[[rm:Lingua tudestga]]
+[[ro:Limba germană]]
 [[ru:Немецкий язык]]
+[[scn:Lingua tudisca]]
+[[sco:German leid]]
+[[se:Duiskkagiella]]
+[[sh:Nemački jezik]]
+[[simple:German language]]
+[[sk:Nemčina]]
+[[sl:Nemščina]]
+[[sm:Fa'asiamani]]
+[[sq:Gjuha gjermane]]
+[[sr:Немачки језик]]
+[[st:Se-jeremane]]
+[[sv:Tyska]]
+[[sw:Kijerumani]]
+[[ta:ஜெர்மன் மொழி]]
+[[tet:Lia-alemaun]]
+[[th:ภาษาเยอรมัน]]
+[[tl:Wikang Aleman]]
+[[tr:Almanca]]
+[[tt:Alman tele]]
+[[uk:Німецька мова]]
+[[ur:جرمن زبان]]
+[[vi:Tiếng Đức]]
+[[zh:德语]]
+[[zh-classical:德語]]
+[[zh-min-nan:Tek-gí]]
+[[zu:IsiJalimani]]
