*Empty MediaWiki Message*

--- a/Рѣꙁан҄ь.mw
+++ b/Рѣꙁан҄ь.mw
@@ -6,7 +6,7 @@
 | Людии = 515,9 тысѧщь
 | Основанъ = 1095
 |}}
-'''Рѧзань''' ({{Lang-ru| Рязань}}), [[Рѧзаньска область|Рѧзаньскы области]] главьнъ градъ ѥстъ. Основана лѣта 1095 ѥстъ. Нарече сѧ '''Переѧславль Рязаньскъ''' до лѣта [[1778]]. Построѥна ѥстъ рѣцѣ [[Ока (рѣка)|Окѣ]]. Людии обитаѥтъ 515,9 тысѫщь.
+'''Рѧзань''' ({{Lang-ru| Рязань}}), [[Рѧзаньска область|Рѧзаньскы области]] главьнъ градъ ѥстъ. Основана лѣта 1095 ѥстъ. Нарече сѧ '''Переѧславль Рязаньскъ''' до лѣта [[1778]]. Построѥна ѥстъ рѣцѣ [[Ока (рѣка)|Окѣ]]. Людии обитаѥтъ 515,9 тысѧщь.
 
 [[Category:Гради]]
 [[Category:Рѡсї]]
