*Empty MediaWiki Message*

--- a/Аꙁѣрбаичанъ.mw
+++ b/Аꙁѣрбаичанъ.mw
@@ -2,14 +2,14 @@
 | знамѧ= [[Видъ:Flag_of_Azerbaijan.svg|150px]]
 | знакъ = [[image:Azerbaijan coa.png|80px]]
 | map = Aj-map.png 
-| Стол҄ьнъ градъ = [[Бакы]]
+| Стол҄ьнъ градъ = [[Бакѹ]]
 | Ѩзыкъ = [[азѣрбаичаньскъ ѩзыкъ|азѣрбаичаньскъ]] 
 | Глава = 
 | area =
 | Людии =  8,500 тысѫщь
 | Почѧта = 
 }}
-'''Азѣрбаичанъ''' ([[азѣрбаичаньскъ ѩзыкъ|азѣрбаичаньскы]] ''Azərbaycan'')  [[Асї|Асїѩ]] дрьжава ѥстъ. Людии обитаѥтъ 8,500 тысѫщь. Стольнъ градъ ѥстъ [[Бакы]]. Дрьжавьнъ ѩзыкъ азѣрбаичаньскъ ѥстъ.
+'''Азѣрбаичанъ''' ([[азѣрбаичаньскъ ѩзыкъ|азѣрбаичаньскы]] ''Azərbaycan'')  [[Асї|Асїѩ]] дрьжава ѥстъ. Людии обитаѥтъ 8,500 тысѫщь. Стольнъ градъ ѥстъ [[Бакѹ]]. Дрьжавьнъ ѩзыкъ азѣрбаичаньскъ ѥстъ.
 
 [[Category:Страны и народи]]
 
