*Empty MediaWiki Message*

--- a/Стара_Ꙁагора.mw
+++ b/Стара_Ꙁагора.mw
@@ -1,13 +1,13 @@
 {{Градъ|name = Стара Загора
-| знамѧ= 
+| знамѧ= [[Видъ:STZflag.gif|120px]]
 | знакъ = [[Видъ:Stara-Zagora-coat-of-arms.svg|80 px]]
 | Дрьжава = Блъгарї
 | Глава = Еѵгенїи Желевъ
-| Людии = 150 тысѫщь
-| Основанъ = 
+| Людии = 160 тысѫщь
+| Основанъ = ~6 тысѫщь лѣта до РХ
 | map = [[Видъ:Stara Zagora location in Bulgaria.png|200 px]]
 }}
-'''Стара Загора''' [[Блъгарї|Блъгарїѧ]] градъ ѥстъ. Людии обитаѥтъ 150 тысѫщь.
+'''Стара Загора''' [[Блъгарї|Блъгарїѧ]] градъ ѥстъ. Людии обитаѥтъ 160 тысѫщь. Стара Загора ѥсть главьнъ градъ [[Старозагорскы  области]]. 
 [[Катигорї:Гради]]
 [[Катигорї:Блъгарї]]
 
