*Empty MediaWiki Message*

--- a/Стара_Ꙁагора.mw
+++ b/Стара_Ꙁагора.mw
@@ -7,7 +7,7 @@
 | Основанъ = ~6 тысѫщь лѣта до РХ
 | map = [[Видъ:Stara Zagora location in Bulgaria.png|200 px]]
 }}
-'''Стара Загора''' [[Блъгарї|Блъгарїѧ]] градъ ѥстъ. Людии обитаѥтъ 160 тысѫщь. Стара Загора ѥсть главьнъ градъ [[Старозагорскы  области]]. 
+'''Стара Загора''' [[Блъгарї|Блъгарїѧ]] градъ ѥстъ. Людии обитаѥтъ 160 тысѫщь. Стара Загора ѥстъ главьнъ градъ [[Старозагорьска область|Старозагорьскы  области]]. 
 [[Катигорї:Гради]]
 [[Катигорї:Блъгарї]]
 
