--- a/Рѣꙁан҄ь.mw
+++ b/Рѣꙁан҄ь.mw
@@ -18,17 +18,17 @@
 [[et:Rjazan]]
 [[fi:Rjazan]]
 [[fr:Riazan]]
+[[ko:랴잔]]
 [[id:Ryazan]]
 [[it:Rjazan']]
-[[ja:リャザン]]
-[[ko:랴잔]]
 [[la:Resan]]
 [[lt:Riazanė]]
 [[nl:Rjazan]]
+[[ja:リャザン]]
 [[os:Рязань]]
 [[pl:Riazań]]
 [[ro:Ryazan]]
-[[ru:Ryazan]]
+[[ru:Рязань]]
 [[sk:Riazaň]]
 [[sv:Rjazan]]
 [[uk:Рязань]]
