*Empty MediaWiki Message*

--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -1,5 +1,5 @@
 {{Дрьжава|name = Рѡсїискыи Съвѫзъ 
-| знамѧ= [[Видъ:Flag of Russia.svg|150px]]
+| знамѧ= [[Видъ:Flag of Russia.svg|150px|border|100px]]
 | знакъ = [[image:Coat of Arms of the Russian Federation.svg|80px]]
 | map = Rs-map-slovensky.png
 | Стол҄ьнъ градъ = [[Москъва]]
@@ -46,6 +46,7 @@
 == Рѡсїѩ наибол҄ьше гради ==
 
 [[image:LocationRussia.svg|thumb|200px|Рѡсї свѣтьнѣ хартѣ]] 
+Си же сѫтъ Рѡсїѩ гради, дѣ более 1 леѡдръ людии обитаѥтъ.
 {| 
 | valign="top" |
 * [[Москъва]] 
