/* Рѡсїѩ наибол҄ьше гради */

--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -46,7 +46,7 @@
 == Рѡсїѩ наибол҄ьше гради ==
 
 [[image:LocationRussia.svg|thumb|200px|Рѡсї свѣтьнѣ хартѣ]] 
-Си же сѫтъ Рѡсїѩ гради, дѣ более 1 леѡдръ людии обитаѥтъ.
+Си же сѫтъ Рѡсїѩ гради, иде бол҄ьше 1 леѡдръ людии обитаѥтъ.
 {| 
 | valign="top" |
 * [[Москъва]] 
