*Empty MediaWiki Message*

--- a/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
+++ b/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-'''Їллѷрїиско-словѣньскъ ѩзыкъ''' [[Їллѷрїиска Словѣнї|Їллѷрїискы Словѣнїѩ]] дрьжавьнъ ѩзыкъ ѥстъ. Мъноѕи дїалекти ѹ ѥго сѫтъ, без мала комьжьдо селѣ свои ѩзыкъ ѥстъ.
+'''Їллѷрїиско-словѣньскъ ѩзыкъ''' (їллѷрїиско-словѣньскы: ''slovenski jezik, slovenščina'') [[Їллѷрїиска Словѣнї|Їллѷрїискы Словѣнїѩ]] дрьжавьнъ ѩзыкъ ѥстъ. Мъноѕи дїалекти ѹ ѥго сѫтъ, без мала комьжьдо селѣ свои ѩзыкъ ѥстъ. Словѣньскы назъванъ «їллѷрїиско-словѣньскъ» да бѣжали бѫ о съмѣшени съ [[словѣньскъ ѩзыкъ|словѣньскомь]] ѩзыкомь и [[Карпатьско-словѣньскъ ѩзыкъ|Карпатьско-словѣньскыимъ]] ѩзыкомъ.
 
 Извѣстьнъ сь ѩзыкъ ѕѣло своими особостьми грамматїцѣ и фонитїцѣ ѥстъ. Грамматїцѣ главьна ѥстъ чь [[двоина]] въ нѥмь се съхрани, коже ѥдьномь тъкъмо [[врьхѹлѹжичьскъ ѩзыкъ|врьхѹлѹжичьсцѣ ѩзыцѣ]] посрѣдѣ вьс҄ѣхъ словѣньскыихъ.
 
@@ -6,16 +6,54 @@
 
 Словѣньсции гласьници '''а''', '''е''', '''и''', '''о''', '''ѹ''', '''ѣ''' и '''ѫ''' тижде звѫци стали сѫтъ. '''Ѧ''' же '''е''' сталъ ѥстъ ѥгда кратъкъ и '''ѣ''' ѥгда длъгъ ѥстъ. '''Ы''' же '''и''' сталъ ѥстъ. Ѥри же пали сѫтъ, ѥгда слабахъ мѣстахъ были сѫтъ, или оба '''ъ''' стали сѫтъ, ѥгда дрѹгахъ мѣстахъ. 
 
-[[Климентовица|Климентовицѫ]] бо [[Їллѷрїисции Словѣне]] забыли, латиньскы же бѹкъви хѹдо присъпособили сѫтъ, нынѣ различи писмѣ междѹ '''е''', '''ѣ''' и '''ъ''' (вьс҄и триѥ латиньскоѭ бѹкъвиѭ '''e''' сѧ пишѫтъ), коже и междѹ '''о''' и '''ѫ''' (лат. '''o''') нѣстъ.
+[[Климентовица|Климентовицѫ]] бо [[Словѣне (Їллѷрїисци)|Їллѷрїисции Словѣне]] забыли, латиньскы же бѹкъви хѹдо присъпособили сѫтъ, нынѣ различи писмѣ междѹ '''е''', '''ѣ''' и '''ъ''' (вьс҄и триѥ латиньскоѭ бѹкъвиѭ '''e''' сѧ пишѫтъ), коже и междѹ '''о''' и '''ѫ''' (лат. '''o''') нѣстъ.
 
 == Їллѷрїиско-словѣньска азбѹкы ==
-
-<div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
-Aa Bb Cc Čč Dd Dždž Ee Ff Gg Hh Ii Jj Kk Ll Ljlj <br>Mm Nn Oo Pp Rr Ss Šš Tt Uu Vv Xx Yy Zz Ž ž
-</div>
+[[Видъ:Slovenska abeceda.png|thumb|400px|Їллѷрїиско-словѣньска азбѹкы пьсана разномъ бѹквиемъ (Times New Roman, Arial, Lucida Console and Monotype Corsiva)]]
+В Їллѷрїиско-словѣньскы азбѹкы 25 бѹквъ сѫть.
+{| cellSpacing="0" cellPadding="0" border="1" style="text-align: center"
+|-----
+! Бѹкы !! звѫкъ
+| width="1" rowspan="22" | &nbsp;
+! Бѹкы !! звѫкъ
+|-----
+| A a || [a] ||| M m|| [m]
+|-----
+| B b || [b], [p] ||| N n  || [n]
+|-----
+| C c || [ʦ] ||| Nj nj || [ɲ]
+|-----
+| Č č || [ʧ] ||| O o || [o], [ɔ]
+|-----
+| D d || [d], [t] ||| P p || [p]
+|-----
+| Dž dž || [ʤ], [ʧ] || R r || [r]
+|-----
+| E e || [e], [ɛ], [ə] || S s || [s]
+|-----
+| F f  || [f] || Š š || [ʃ]
+|-----
+| G g || [g], [k] || T t || [t]
+|-----
+| H h || [x] || U u || [u]
+|-----
+| I i || [i] || V v  || [v], [w]
+|-----
+| J j || [j] || Zz || [z]
+|-----
+|K k  || [k] || Ž ž  || [ʒ], [ʃ]
+|-----
+| L l || [l], [w] || || 
+|-----
+| Lj lj|| [ʎ], [l] ||  || 
+|-----
+|}
 
 == Зьри такожде ==
 {{InterWiki|sl|Glavna_stran||їллѷрїиско-словѣньскыимь}}
+* [http://www.ijs.si/slo-chset.html-l2 Slovene alphabet]
+* [http://euro.typo.cz/ Typo.cz Information on Central European typography and typesetting]
+
 [[Category:Словѣньсци ѩзыци]]
 [[Category:Їллѷрїиска Словѣнї]]
 
