/* Їллѷрїиско-словѣньска азбѹкы */

--- a/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
+++ b/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
@@ -11,7 +11,7 @@
 
 == Їллѷрїиско-словѣньска азбѹкы ==
 [[Видъ:Slovenska abeceda.png|thumb|400px|Їллѷрїиско-словѣньска азбѹкы пьсана разномъ бѹквиемъ (Times New Roman, Arial, Lucida Console and Monotype Corsiva)]]
-В Їллѷрїиско-словѣньскы азбѹкы 25 бѹквъ сѫть.
+Въ Їллѷрїиско-словѣньскы азбѹкы 25 бѹквъ сѫть.
 {| cellSpacing="0" cellPadding="0" border="1" style="text-align: center"
 |-----
 ! Бѹкы !! звѫкъ
