--- a/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
+++ b/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
@@ -1,12 +1,12 @@
 [[Видъ:Gruppy dialektov.png|thumb|Дїалектъ харта]]
 '''Їллѷрїиско-словѣньскъ ѩзыкъ''' (їллѷрїиско-словѣньскы: ''slovenski jezik, slovenščina'') [[Їллѷрїиска Словѣнї|Їллѷрїискы Словѣнїѩ]] дрьжавьнъ ѩзыкъ ѥстъ. Мъноѕи дїалекти ѹ ѥго сѫтъ, без мала комьжьдо селѣ свои ѩзыкъ ѥстъ. Словѣньскы назъванъ «їллѷрїиско-словѣньскъ» да бѣжали бѫ о съмѣшени съ [[словѣньскъ ѩзыкъ|словѣньскомь]] ѩзыкомь и [[Карпатьско-словѣньскъ ѩзыкъ|Карпатьско-словѣньскыимъ]] ѩзыкомъ.
 
-Извѣстьнъ сь ѩзыкъ ѕѣло своими особостьми грамматїцѣ и фонитїцѣ ѥстъ. Грамматїцѣ главьна ѥстъ чь [[двоина]] въ нѥмь се съхрани, коже ѥдьномь тъкъмо [[врьхѹлѹжичьскъ ѩзыкъ|врьхѹлѹжичьсцѣ ѩзыцѣ]] посрѣдѣ вьс҄ѣхъ словѣньскыихъ.
+Извѣстьнъ сь ѩзыкъ ѕѣло своими особостьми грамматїцѣ и фѡнитїцѣ ѥстъ. Грамматїцѣ главьна ѥстъ чь [[двоина]] въ нѥмь се съхрани, коже ѥдьномь тъкъмо [[врьхѹлѹжичьскъ ѩзыкъ|врьхѹлѹжичьсцѣ ѩзыцѣ]] посрѣдѣ вьс҄ѣхъ словѣньскыихъ.
 
-==  Фонитїка  ==
+==  Фѡнитїка  ==
 
 [[Видъ:Slovenian vowel chart.png|thumb|left|їллѷрїиско-словѣньскы гласьници]]
-Фонетїцѣ же чѹдьна вещь гласьници сѫтъ. Въ ѥдиного на десѧте нашего гласьника мѣсто сьде осмь гласьникъ сѫтъ: '''а''', '''е''', '''и''', '''о''', '''ѹ''', '''ъ''', '''ѣ''', '''ѫ'''. '''Ъ''' срѣдиньнѣи сѧ издрицаѥтъ ([ə]). '''Ѣ''' же междѹ '''е''' и '''и''' стоитъ. '''Ѫ''' же носьныи призвѫкъ не съхранилъ ѥстъ. Нѣкогда с҄ихъ звѫкъ бол҄ьши чѧсть длъга или кратъка быти могла ѥстъ, нынѣ же тако без мала никъто не глаголѥтъ. 
+Фѡнитїцѣ же чѹдьна вещь гласьници сѫтъ. Въ ѥдиного на десѧте нашего гласьника мѣсто сьде осмь гласьникъ сѫтъ: '''а''', '''е''', '''и''', '''о''', '''ѹ''', '''ъ''', '''ѣ''', '''ѫ'''. '''Ъ''' срѣдиньнѣи сѧ издрицаѥтъ ([ə]). '''Ѣ''' же междѹ '''е''' и '''и''' стоитъ. '''Ѫ''' же носьныи призвѫкъ не съхранилъ ѥстъ. Нѣкогда с҄ихъ звѫкъ бол҄ьши чѧсть длъга или кратъка быти могла ѥстъ, нынѣ же тако без мала никъто не глаголѥтъ. 
 
 Словѣньсции гласьници '''а''', '''е''', '''и''', '''о''', '''ѹ''', '''ѣ''' и '''ѫ''' тижде звѫци стали сѫтъ. '''Ѧ''' же '''е''' сталъ ѥстъ ѥгда кратъкъ и '''ѣ''' ѥгда длъгъ ѥстъ. '''Ы''' же '''и''' сталъ ѥстъ. Ѥри же пали сѫтъ, ѥгда слабахъ мѣстахъ были сѫтъ, или оба '''ъ''' стали сѫтъ, ѥгда дрѹгахъ мѣстахъ. 
 
