/* Карпатьско-рѹсьска азъбѹкы */

--- a/Карпатьскороусьскъ_ѩꙁꙑкъ.mw
+++ b/Карпатьскороусьскъ_ѩꙁꙑкъ.mw
@@ -2,7 +2,7 @@
 == Карпатьско-рѹсьска азъбѹкы  ==
 Бѹкъвъ рѧдъ данъ съгласьно съ ѹкраиньскыімъ изводомъ карпатьско-рѹськаѥго ѩзыка.
 <div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
-Аа Бб Вв Гг Дд Ее Єє Ёё Жж Зз Ии Ii Ыы Йй Її Кк Лл Мм Нн Оо Пп Рр Сс ТтУу Фф Хх Цц Чч Шш Щщ (Ѣѣ)<ref name="">Бѹкъва азъбѹкѭ по [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]] нѥсть</ref> Чч Юю Яя Ьь Ъъ
+Аа Бб Вв Гг Дд Ее Єє Ёё Жж Зз Ии Ii Ыы Йй Її Кк Лл Мм Нн Оо Пп Рр Сс ТтУу Фф Хх Цц Чч Шш Щщ (Ѣѣ)<ref name="">Бѹкы азъбѹкѭ по [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]] нѣстъ</ref> Чч Юю Яя Ьь Ъъ
 </div>
 <references />
 [[Category:Словѣньсци ѩзыци]]
