/* Їллѷрїиско-словѣньска азбѹкы */

--- a/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
+++ b/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
@@ -13,7 +13,7 @@
 [[Климентовица|Климентовицѫ]] бо [[Словѣне (Їллѷрїисци)|Їллѷрїисции Словѣне]] забыли, латиньскы же бѹкъви хѹдо присъпособили сѫтъ, нынѣ различи писмѣ междѹ '''е''', '''ѣ''' и '''ъ''' (вьс҄и триѥ латиньскоѭ бѹкъвиѭ '''e''' сѧ пишѫтъ), коже и междѹ '''о''' и '''ѫ''' (лат. '''o''') нѣстъ.
 
 == Їллѷрїиско-словѣньска азбѹкы ==
-[[Видъ:Slovenska abeceda.png|thumb|400px|Їллѷрїиско-словѣньска азбѹкы пьсана разномъ бѹквиемъ (Times New Roman, Arial, Lucida Console and Monotype Corsiva)]]
+[[Видъ:Slovenska abeceda.png|thumb|400px|Їллѷрїиско-словѣньска азбѹкы пьсана разномъ бѹквиемъ (Times New Roman, Arial, Lucida Console и Monotype Corsiva)]]
 Въ Їллѷрїиско-словѣньскы азбѹкы 25 бѹквъ и 3 дїграѳъ сѫть.
 {| cellSpacing="0" cellPadding="0" border="1" style="text-align: center"
 |-----
