*Empty MediaWiki Message*

--- a/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
+++ b/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
@@ -1,5 +1,5 @@
 [[Видъ:Gruppy dialektov.png|thumb|Дїалектъ харта]]
-'''Їллѷрїиско-словѣньскъ ѩзыкъ''' (їллѷрїиско-словѣньскы: ''slovenski jezik, slovenščina'') [[Їллѷрїиска Словѣнї|Їллѷрїискы Словѣнїѩ]] дрьжавьнъ ѩзыкъ ѥстъ. Мъноѕи дїалекти ѹ ѥго сѫтъ, без мала комьжьдо селѣ свои ѩзыкъ ѥстъ. Словѣньскы назъванъ «їллѷрїиско-словѣньскъ» да бѣжали бѫ о съмѣшени съ [[словѣньскъ ѩзыкъ|словѣньскомь]] ѩзыкомь и [[Карпатьско-словѣньскъ ѩзыкъ|Карпатьско-словѣньскыимъ]] ѩзыкомъ.
+'''Їллѷрїиско-словѣньскъ ѩзыкъ''' (їллѷрїиско-словѣньскы: ''slovenski jezik, slovenščina'') [[Їллѷрїиска Словѣнї|Їллѷрїискы Словѣнїѩ]] дрьжавьнъ ѩзыкъ ѥстъ. Людии глаголѭщь карпатьско-словѣньскы 2,2 леѡдръ сѫтъ. Мъноѕи дїалекти ѹ ѥго сѫтъ, без мала комьжьдо селѣ свои ѩзыкъ ѥстъ. Словѣньскы назъванъ «їллѷрїиско-словѣньскъ» да бѣжали бѫ о съмѣшени съ [[словѣньскъ ѩзыкъ|словѣньскомь]] ѩзыкомь и [[Карпатьско-словѣньскъ ѩзыкъ|Карпатьско-словѣньскыимъ]] ѩзыкомъ.
 
 Извѣстьнъ сь ѩзыкъ ѕѣло своими особостьми грамматїцѣ и фѡнитїцѣ ѥстъ. Грамматїцѣ главьна ѥстъ чь [[двоина]] въ нѥмь се съхрани, коже ѥдьномь тъкъмо [[врьхѹлѹжичьскъ ѩзыкъ|врьхѹлѹжичьсцѣ ѩзыцѣ]] посрѣдѣ вьс҄ѣхъ словѣньскыихъ.
 
