--- a/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
+++ b/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
@@ -5,7 +5,7 @@
 
 ==  Фѡнитїка  ==
 
-[[Видъ:Slovenian vowel chart.png|thumb|left|їллѷрїиско-словѣньскы гласьници]]
+[[Видъ:Slovenian vowel chart.png|thumb|left|їллѷрїиско-словѣньскы гласьны звѫци]]
 Фѡнитїцѣ же чѹдьна вещь гласьници сѫтъ. Въ ѥдиного на десѧте нашего гласьника мѣсто сьде осмь гласьникъ сѫтъ: '''а''', '''е''', '''и''', '''о''', '''ѹ''', '''ъ''', '''ѣ''', '''ѫ'''. '''Ъ''' срѣдиньнѣи сѧ издрицаѥтъ ([ə]). '''Ѣ''' же междѹ '''е''' и '''и''' стоитъ. '''Ѫ''' же носьныи призвѫкъ не съхранилъ ѥстъ. Нѣкогда с҄ихъ звѫкъ бол҄ьши чѧсть длъга или кратъка быти могла ѥстъ, нынѣ же тако без мала никъто не глаголѥтъ. 
 
 Словѣньсции гласьници '''а''', '''е''', '''и''', '''о''', '''ѹ''', '''ѣ''' и '''ѫ''' тижде звѫци стали сѫтъ. '''Ѧ''' же '''е''' сталъ ѥстъ ѥгда кратъкъ и '''ѣ''' ѥгда длъгъ ѥстъ. '''Ы''' же '''и''' сталъ ѥстъ. Ѥри же пали сѫтъ, ѥгда слабахъ мѣстахъ были сѫтъ, или оба '''ъ''' стали сѫтъ, ѥгда дрѹгахъ мѣстахъ. 
