--- a/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
+++ b/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
@@ -14,7 +14,7 @@
 
 == Їллѷрїиско-словѣньска азбѹкы ==
 [[Видъ:Slovenska abeceda.png|thumb|400px|Їллѷрїиско-словѣньска азбѹкы пьсана разномъ бѹквиемъ (Times New Roman, Arial, Lucida Console и Monotype Corsiva)]]
-Въ Їллѷрїиско-словѣньскы азбѹкы 25 бѹквъ и 3 дїграѳъ сѫть.
+Въ Їллѷрїиско-словѣньскы азбѹкы 25 бѹкъвъ и 3 дїграѳъ сѫть.
 {| cellSpacing="0" cellPadding="0" border="1" style="text-align: center"
 |-----
 ! Бѹкы !! звѫкъ
