--- a/Мємфь.mw
+++ b/Мємфь.mw
@@ -1,3 +1,3 @@
 '''Мемъфисъ.'''
 
-Мемъфисъ бѣ стол҄ьнъ градъ въ древл҄ьн҄и [[Егѵпьтъ|Ег҄ѵпьтѣ]] иже основанъ быстъ [[Фараѡнъ|фараѡномь]] [[Хоръ-Аха|Хоръ-Аха]].
+Мемъфисъ стол҄ьнъ градъ бѣ древл҄ьн҄и [[Егѷпьтъ|Ег҄ѷпьтѣ]] иже основанъ быстъ [[Фараѡнъ|фараѡномь]] [[Хоръ-Аха|Хоръ-Аха]].
