*Empty MediaWiki Message*

--- a/Прьваꙗ_дѷнастиꙗ_Єгѷпьта.mw
+++ b/Прьваꙗ_дѷнастиꙗ_Єгѷпьта.mw
@@ -1,1 +1,1 @@
-'''Прьва дѷнасти [[Егѷпьтъ|Егѷпьта]]''' бѣ [[Фараѡнъ|фараѡни]] ции владычьствоваахѫ отъ лѣта ҂гл҃е прѣдъ р҃х до лѣта ҂вѿч прѣдъ р҃х. Сии фараѡни сѫтъ [[Хоръ-Аха|Хоръ-Аха]] и [[Дъжеръ|Дъжеръ]] и [[Денъ|Денъ]] и прочии. Брьньныи гроби ихъ бышѧ обрѣщени въ древл҄ьн҄ихъ градѣхъ [[Абѷдосъ|Абѷдосѣ]] и [[Саккара|Саккарѣ]] отъ [[Франкї|франкїиськаѥго]] [[Археологи|археолога]] [[Флиндерсъ Петри|Флиндерса Петри]] въ ι҃ѳ сътолѣтии отъ р҃х.
+'''Прьва дѷнасти [[Егѷпьтъ|Егѷпьта]]''' [[Фараѡнъ|фараѡни]] бѣ ции владычьствоваахѫ отъ лѣта 3035 прѣдъ р҃х до лѣта 2890 прѣдъ р҃х. Сии фараѡни [[Хоръ-Аха|Хоръ-Аха]] и [[Дъжеръ|Дъжеръ]] и [[Денъ|Денъ]] и прочии сѫтъ. Брьньни гроби ихъ обрѣщени бышѧ древл҄ьн҄ихъ градѣхъ [[Абѷдосъ|Абѷдосѣ]] и [[Саккара|Саккарѣ]] отъ [[Франкї|франкїиська]] [[Археологи|археолога]] [[Флиндерсъ Петри|Флиндерса Петри]] сътолѣти 19.
