--- a/Їѡаннъ_Асєн҄ь_В҃.mw
+++ b/Їѡаннъ_Асєн҄ь_В҃.mw
@@ -1,5 +1,5 @@
 [[Видъ:Ivan-asen-II-zograf-portrait.jpg|thumb]]
-'''Иванъ Асенъ II'''  ({{lang-bg| Иван Асен II}}, 1218-1241) бѣ цѣсарь блъгареѭ.Създа цѣсарьство великоѥ, коѥго стольнъ градъ бѣ блъгарскъ градъ Преславъ.
+'''Іванъ Асенъ II'''  ({{lang-bg| Иван Асен II}}, 1218-1241) бѣ цѣсарь блъгареѭ.Създа цѣсарьство великоѥ, коѥго стольнъ градъ бѣ блъгарскъ градъ Преславъ.
 
 [[Category:Блъгарї| ]]
 [[ru:Иван II Асень]]
