*Empty MediaWiki Message*

--- a/Їѡаннъ_Асєн҄ь_В҃.mw
+++ b/Їѡаннъ_Асєн҄ь_В҃.mw
@@ -1,5 +1,14 @@
 [[Видъ:Ivan-asen-II-zograf-portrait.jpg|thumb]]
 '''Іванъ Асенъ В'''  ({{lang-bg| Иван Асен II}}, 1218-1241) бѣ цѣсарь [[Блъгарї|блъгареѭ]]. Івана Асена А сынъ ѥстъ. Създа цѣсарьство великоѥ, коѥго [[стольнъ градъ]] бѣ блъгарскъ градъ [[Преславъ]].
 
-[[Category:Блъгарї| ]]
+[[Category:Блъгарї]]
+[[bg:Иван Асен II]]
+[[de:Ivan Asen II.]]
+[[el:Ιβάν Άσεν Β']]
+[[en:Ivan Asen II of Bulgaria]]
+[[it:Ivan Asen II di Bulgaria]]
+[[ja:イヴァン・アセン2世]]
+[[pl:Iwan Asen II]]
 [[ru:Иван II Асень]]
+[[sk:Ivan Asen II.]]
+[[sv:Ivan Asen II]]
