The file [[:Image:Zagreb_coat_of_arms.gif]] has been removed, as it has been deleted by [[:commons:User:Polarlys]]: ''In category [[w:commons::category:Copyright violation|Copyright violation]]; not edited for 8 days''. ''[[m:User:CommonsDelinker|Tra

--- a/Ꙁагрєбъ.mw
+++ b/Ꙁагрєбъ.mw
@@ -1,6 +1,6 @@
 {{Градъ|name = Загребъ
 | знамѧ= [[Видъ:Zagreb zastava.gif|100 px]]
-| знакъ = [[Видъ:Zagreb coat of arms.gif|80 px]]
+| знакъ = 
 | Дрьжава = Хръватьска
 | Глава = 
 | Людии = 779145
