--- a/Ꙁагрєбъ.mw
+++ b/Ꙁагрєбъ.mw
@@ -1,11 +1,11 @@
 {{Градъ|name = Загребъ
 | знамѧ= [[Видъ:Zagreb zastava.gif|100 px]]
-| знакъ = 
+| знакъ = [[Видъ:Zagreb coa.gif|80 px]]
 | Дрьжава = Хръватьска
 | Глава = 
 | Людии = 779145
 | Основанъ = 1094
-| map = 
+| map = [[Видъ:CroatiaGradZagreb.png]]
 |}}
 '''Загребъ''' ([[Хръватьскъ ѩзыкъ|хръватьскы]] ''Zagreb'') градъ [[Хръватьска|Хръватьскы]] ѥсть, ѥѩ стольныи градъ ѥсть. Въ Загребѣ людии обитаѥтъ 779 145, построѥнъ рѣцѣ [[Сава|Савѣ]] ѥсть. Загребъ основанъ ѥсть лѣта 1094, градъ с лѣта 1242 ѥсть. Града имѧ Градьцъ бѣаше.
 [[Category:Гради]]
