--- a/Ꙁагрєбъ.mw
+++ b/Ꙁагрєбъ.mw
@@ -7,7 +7,7 @@
 | Основанъ = 1094
 | map = [[Видъ:CroatiaGradZagreb.png]]
 |}}
-'''Загребъ''' ([[Хръватьскъ ѩзыкъ|хръватьскы]] ''Zagreb'') градъ [[Хръватьска|Хръватьскы]] ѥсть, ѥѩ стольныи градъ ѥсть. Въ Загребѣ людии обитаѥтъ 779 145, построѥнъ рѣцѣ [[Сава|Савѣ]] ѥсть. Загребъ основанъ ѥсть лѣта 1094, градъ с лѣта 1242 ѥсть. Града имѧ Градьцъ бѣаше.
+'''Загребъ''' ([[Хръватьскъ ѩзыкъ|хръватьскы]] ''Zagreb'') [[Хръватьска|Хръватьскы]] стольнъ градъ ѥсть. Загребѣ людии обитаѥтъ 779 145, построѥнъ рѣцѣ [[Сава|Савѣ]] ѥсть. Загребъ основанъ ѥсть 1094, градъ съ лѣта 1242 ѥсть. Града имѧ Градьцъ бѣаше.
 [[Category:Гради]]
 [[Category:Стольни гради]]
 [[Category:Хръватьска]]
