Градоглавы имѧ допьсахъ.

--- a/Ꙁагрєбъ.mw
+++ b/Ꙁагрєбъ.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Zagreb zastava.gif|100 px]]
 | знакъ = [[Видъ:Zagreb coa.gif|80 px]]
 | Дрьжава = Хръватьска
-| Глава = 
+| Глава = Миланъ Бандищь
 | Людии = 779145
 | Основанъ = 1094
 | map = [[Видъ:CroatiaGradZagreb.png]]
