--- a/Їѡаннъ_Асєн҄ь_В҃.mw
+++ b/Їѡаннъ_Асєн҄ь_В҃.mw
@@ -1,5 +1,5 @@
 [[Видъ:Ivan-asen-II-zograf-portrait.jpg|thumb]]
-'''Іванъ Асенъ В'''  ({{lang-bg| Иван Асен II}}, 1218-1241) бѣ цѣсарь [[Блъгарї|блъгареѭ]]. Івана Асена А сынъ ѥстъ. Създа цѣсарьство великоѥ, коѥго [[стольнъ градъ]] бѣ блъгарскъ градъ [[Преславъ]].
+'''Иванъ Асенъ В'''  ({{lang-bg| Иван Асен II}}, 1218-1241) [[Блъгарї|Блъгарїѩ]] цѣсарь бѣ. [[Иванъ Асенъ А|Ивана Асена А]] сынъ ѥстъ. Велико цѣсарьство съзьда, ѥгоже стольнъ градъ [[Прѣславъ]] бѣ.
 
 [[Category:Блъгарї]]
 [[bg:Иван Асен II]]
