--- a/Макєдонїꙗ_·_страна.mw
+++ b/Макєдонїꙗ_·_страна.mw
@@ -1,6 +1,6 @@
 {{Дрѹѕи съмысли|Македонї (съмысли)}}
 [[Image:Europe Balkans Macedonia geo.jpg|thumb|right|300px|[[w:cu:Македонї|Македонї]]]]
-'''Македонї''' - Еѵрѡпы срѣдьн̑ии [[Балкани|Балканъ]] древл҄ьнъ страна ѥстъ. Чѧсти ѥѩ нынѣ Грецѣхъ, [[Македонї|Македонїѩ]] (димократїѩ) и  [[Блъгарї|Блъгарїѩ]] сѫть.
+'''Макед''о''нї''' [[Еѵрѡпа|Еѵрѡпы]] срѣдьн̑ь [[Балкани|Балканъ]] древл҄ьн страна ѥстъ. Ѥѩ чѧсти нынѣ дѣлѥны междѹ [[Грьци]], [[Алванїѥѭ]], [[Македонї|Македонїѥѭ]] и  [[Блъгарї|Блъгарїѥѭ]] сѫтъ.
 
 [[Category:Македонї|*]]
 
