--- a/Пол҄ьска.mw
+++ b/Пол҄ьска.mw
@@ -4,10 +4,10 @@
 | map = LocationPoland.svg 
 | Стол҄ьнъ градъ = [[Варшава]] 
 | Ѩзыкъ = [[Пол҄ьскъ ѩзыкъ|пол̑ьскъ]] 
-| Глава = [[Лехъ Качыньскі]] 
+| Глава = [[Лехъ Качиньскыи]] 
 | area =
 | Людии = 38,1 леѡдръ
-| Почѧта = 966 (сънова сам. 1918) 
+| Почѧта = 966 (пакы сам. 1918) 
 }}
 '''По́л̑ьска''' ([[пол̑ьскъ ѩзыкъ|пол̑ьскы]]: ''Polska''), епїсимьно имѧ ''Димократї По́л̑ьска'' ([[пол̑ьскъ ѩзыкъ|пол̑ьскы]]: ''Rzeczpospolita Polska''), срѣдьнѩ [[Еѵрѡпа|Еѵрѡпы]] дрьжава ѥстъ. Стольнъ градъ [[Варшава]] ѥстъ. Дрьжавьнъ [[Пол҄ьскъ ѩзыкъ|пол̑ьскъ ѩзыкъ]] ѥстъ. Людии обитаѥтъ 38,1 леѡдръ.
 
