Мо глава дирава. Лехъ > Льхъ. :)

--- a/Пол҄ьска.mw
+++ b/Пол҄ьска.mw
@@ -4,7 +4,7 @@
 | map = LocationPoland.svg 
 | Стол҄ьнъ градъ = [[Варшава]] 
 | Ѩзыкъ = [[Пол҄ьскъ ѩзыкъ|пол̑ьскъ]] 
-| Глава = [[Лехъ Качиньскыи]] 
+| Глава = [[Льхъ Качиньскыи]] 
 | area =
 | Людии = 38,1 леѡдръ
 | Почѧта = 966 (пакы сам. 1918) 
