--- a/Їѡаннъ_Асєн҄ь_В҃.mw
+++ b/Їѡаннъ_Асєн҄ь_В҃.mw
@@ -1,5 +1,5 @@
 [[Видъ:Ivan-asen-II-zograf-portrait.jpg|thumb]]
-'''Иванъ Асенъ В'''  ({{lang-bg| Иван Асен II}}, 1218-1241) [[Блъгарї|Блъгарїѩ]] цѣсарь бѣ. [[Иванъ Асенъ А|Ивана Асена А]] сынъ ѥстъ. Велико цѣсарьство съзьда, ѥгоже стольнъ градъ [[Прѣславъ]] бѣ.
+'''Иванъ Асен҄ь В'''  ({{lang-bg| Иван Асен II}}, 1218-1241) [[Блъгарї|Блъгарїѩ]] цѣсарь бѣ. [[Иванъ Асен҄ь А|Ивана Асен А]] сынъ ѥстъ. Велико цѣсарьство съзьда, ѥгоже стольнъ градъ [[Прѣславъ]] бѣ.
 
 [[Category:Блъгарї]]
 [[bg:Иван Асен II]]
