*Empty MediaWiki Message*

--- a/Дрєвл҄ьн҄ь_роусьскъ_ѩꙁꙑкъ.mw
+++ b/Дрєвл҄ьн҄ь_роусьскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-'''Древл҄ьнъ рѹсьскъ ѩзыкъ''' (др. рѹсьскы: ''Рѹсьскыи ѧзыкъ, Рѹскыи ѧзыкъ'') ѥстъ ѩзыкъ въсточьнословѣньскаѥго извода словѣньскаѥго дрѣвесе ѩзыкъ. Древл҄ьнъ рѹсьскъ ѩзыкъ пакы мрьтвъ ѩзыкъ ѥстъ. От ѥго же [[рѹсьскъ ѩзыкъ|рѹсьскъ]],  [[Ѹкраиньскъ ѩзыкъ|ѹкраиньскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци сѫтъ. Письмо древл҄ьнъ рѹсьскаѥго ѩзыкъ [[Климентовица]] ѥсть.
+'''Древл҄ьнъ рѹсьскъ ѩзыкъ''' (др. рѹсьскы: ''Рѹсьскыи ѧзыкъ, Рѹскыи ѧзыкъ'') ѥстъ ѩзыкъ въсточьнословѣньскаѥго извода словѣньскаѥго дрѣвесе ѩзыкъ. Мъноѕи дїалекти ѹ ѥго быстъ. Древл҄ьнъ рѹсьскъ ѩзыкъ пакы мрьтвъ ѩзыкъ ѥстъ. От ѥго же [[рѹсьскъ ѩзыкъ|рѹсьскъ]],  [[Ѹкраиньскъ ѩзыкъ|ѹкраиньскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци сѫтъ. Письмо древл҄ьнъ рѹсьскаѥго ѩзыкъ [[Климентовица]] ѥсть.
 [[Category:мрьтви ѩзыци]]
 [[Category:Словѣньсци ѩзыци]]
 [[ru:Древнерусский язык]]
