--- a/Дрєвл҄ьн҄ь_роусьскъ_ѩꙁꙑкъ.mw
+++ b/Дрєвл҄ьн҄ь_роусьскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-'''Древл҄ьнъ рѹсьскъ ѩзыкъ''' (др. рѹсьскы: ''Рѹсьскыи ѧзыкъ, Рѹскыи ѧзыкъ'') ѥстъ ѩзыкъ въсточьнословѣньскаѥго извода словѣньскаѥго дрѣвесе ѩзыкъ. Мъноѕи дїалекти ѹ ѥго быстъ. Древл҄ьнъ рѹсьскъ ѩзыкъ пакы мрьтвъ ѩзыкъ ѥстъ. От ѥго же [[рѹсьскъ ѩзыкъ|рѹсьскъ]],  [[Ѹкраиньскъ ѩзыкъ|ѹкраиньскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци сѫтъ. Письмо древл҄ьнъ рѹсьскаѥго ѩзыкъ [[Климентовица]] ѥсть.
+'''Древл҄ьн҄ь рѹсьскъ ѩзыкъ''' (древл҄ьнѥрѹсьскы: ''Рѹсьскыи зыкъ'') въсточьнословѣньска извода словѣньска дрѣвесе ѩзыкъ ѥстъ. Сыи мъногы дїалекты, из ихъже ѥтерѣмъ вельми нарочити чрьти бѣ (виждь [[древл҄ьнѥновоградьскъ ѩзыкъ]]). О древл҄ьнѥрѹсьскаѥго ѩзыка [[рѹсьскъ ѩзыкъ|рѹсьскъ]],  [[Ѹкраиньскъ ѩзыкъ|ѹкраиньскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзыци изишьли сѫтъ. Письмо древл҄ьнѥго рѹсьскаѥго ѩзыка [[Словѣньска азъбѹкы|Климентовица]] ѥстъ.
 [[Category:мрьтви ѩзыци]]
 [[Category:Словѣньсци ѩзыци]]
 [[ru:Древнерусский язык]]
