--- a/Словѣньсци_ѩꙁꙑци.mw
+++ b/Словѣньсци_ѩꙁꙑци.mw
@@ -10,9 +10,9 @@
 * [[Карпатьско-рѹськъ ѩзыкъ|карпатьско-рѹсьскъ]].
 
 Си же сѫтъ мрьтви '' въсточьни'' словѣньсци ѩзыци: 
-* [[Древл҄ьнъ рѹсьскъ ѩзыкъ|древл҄ьнъ рѹсьскъ]] - от ѥго рѹсьскъ, ѹкраиньскъ и бѣлорѹсьскъ ѩзъци сѫтъ
+* [[Древл҄ьн҄ь рѹсьскъ ѩзыкъ|Древл҄ьн҄ь рѹсьскъ]] - о ѥго рѹсьскъ, ѹкраиньскъ и бѣлорѹсьскъ ѩзъци изишьли сѫтъ
 * [[Говоръ древл҄ьнѥновоградьскъ|древл҄ьнѥновоградьскъ]]
-* [[Западьно-рѹсьскъ ѩзыкъ|западьно-рѹсьскъ (древл҄ьнъ бѣлорѹсьскъ)]]  - от ѥго бѣлорѹсьскъ ѩзъкъ ѥстъ
+* [[Западьно-рѹсьскъ ѩзыкъ|западьно-рѹсьскъ (древл҄ьнъ бѣлорѹсьскъ)]]  - о ѥго бѣлорѹсьскъ ѩзъкъ  ѥстъ
 
 == Западьни ==
 
