*Empty MediaWiki Message*

--- a/Роусьскъ_ѩꙁꙑкъ.mw
+++ b/Роусьскъ_ѩꙁꙑкъ.mw
@@ -1,5 +1,5 @@
 [[Видъ:RussianLanguageMap.png|thumb]]
-'''Рѹсьскъ ѩзыкъ''' ({{Lang-ru|русский язык}}) [[Рѡсї|Рѡсїѩ]] и [[Бѣла Рѹсь|Бѣлы Рѹси]] дрьжавьнъ ѩзыкъ ѥстъ. Сыновл҄ь ѩзыкъ [[Древл҄ьнъ рѹсьскъ ѩзыкъ|древльнѥго рѹсьскаѥго ѩзыка]], от ѥго же [[Ѹкраиньскъ ѩзыкъ|ѹкраиньскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци сѫтъ. Глаголѭщь людии же с҄имь ѩзыкомь междѹ 300 и 350 леѡдръ сѫтъ. Ѥдинъ и шести епїсимьнъ и дѣльнъ ѩзыкъ [[Ѥдьнѥнъ народъ съвѣтъ|ѤНС]] ѥстъ.
+'''Рѹсьскъ ѩзыкъ''' ({{Lang-ru|русский язык}}) [[Рѡсї|Рѡсїѩ]] и [[Бѣла Рѹсь|Бѣлы Рѹси]] дрьжавьнъ ѩзыкъ ѥстъ. Сыновл҄ь ѩзыкъ [[Древл҄ьн҄ь рѹсьскъ ѩзыкъ|древл҄ьнѥго рѹсьскаѥго ѩзыка]], от ѥго же [[Ѹкраиньскъ ѩзыкъ|ѹкраиньскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци сѫтъ. Глаголѭщь людии же с҄имь ѩзыкомь междѹ 300 и 350 леѡдръ сѫтъ. Ѥдинъ и шести епїсимьнъ и дѣльнъ ѩзыкъ [[Ѥдьнѥнъ народъ съвѣтъ|ѤНС]] ѥстъ.
 == Рѹсьска азъбѹкы  ==
 <div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
 Аа Бб Вв Гг Дд Ее Ёё Жж Зз Ии Йй Кк Лл Мм Нн Оо Пп Рр Сс Тт Уу Фф Хх Цц Чч Шш Щщ Чч Ъъ Ыы Ьь Ээ Юю Яя
